fabric/testdata/out/ing_brexit-indexer-test-dagordon-statsd-exporter-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"application":"brexit","component":"statsd-exporter","controller-uid":"81ed9ca1-c81e-4b9e-8f0e-3c80be35616b","deployment-id":"d-493zaepnaytoxkxiq596reh9h","environment":"review","pipeline-id":"l-ngeow7caio7qdeiqsrnrfprjh","version":"pr-39-1"},"name":"brexit-indexer-test-dagordon-statsd-exporter-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"brexit-indexer-test-dagordon-statsd-exporter.smart-product-platform-test.zalan.do","http":{" [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-06-10T09:19:09Z"
  generation: 1
  labels:
    application: brexit
    component: statsd-exporter
    controller-uid: 81ed9ca1-c81e-4b9e-8f0e-3c80be35616b
    deployment-id: d-493zaepnaytoxkxiq596reh9h
    environment: review
    pipeline-id: l-ngeow7caio7qdeiqsrnrfprjh
    version: pr-39-1
  name: brexit-indexer-test-dagordon-statsd-exporter-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-indexer-test-dagordon-statsd-exporter
    uid: 81ed9ca1-c81e-4b9e-8f0e-3c80be35616b
  resourceVersion: "1357488302"
  uid: 9bba22bc-3891-4ed5-bdff-c93c7017b54b
spec:
  rules:
  - host: brexit-indexer-test-dagordon-statsd-exporter.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-indexer-test-dagordon-statsd-exporter
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
